--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools>=61.0"]
+requires = ["setuptools>=80.9.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
@@ -11,5 +11,15 @@ authors = [
 description = ""
 readme = "README.md"
 license = { file = "LICENSE" }
-requires-python = ">=3.8"
-dependencies = []
+requires-python = ">=3.13.7"
+dependencies = [
+    "numpy>=2.3.3",
+    "cloudscraper>=1.2.71",
+    "questionary>=2.1.1",
+    "returns[compatible-mypy]>=0.26.0",
+    "h5py>=3.14.0",
+    "typeguard>=4.4.4"
+]
+
+[tool.setuptools.package-data]
+"gixpes" = ["templates/files/*.py"]
