--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,8 @@ requires = [
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "gixps"
-version = "25.12.9"
+name = "SamplModls"
+version = "25.12.16"
 authors = [
     { name="David Capalbo", email="david.capalbo@uni-konstanz.de" }
 ]
@@ -15,14 +15,4 @@ readme = "README.md"
 license = { file = "LICENSE" }
 requires-python = ">=3.13.7"
 dependencies = [
-    "numpy>=2.3.3",
-    "cloudscraper>=1.2.71",
-    "questionary>=2.1.1",
-    "returns[compatible-mypy]>=0.26.0",
-    "h5py>=3.14.0",
-    "typeguard>=4.4.4",
-    "pywin32;sys_platform == 'win32'",
 ]
-
-[tool.setuptools.package-data]
-"gixps" = ["templates/files/*.py"]
