--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,4 +15,5 @@ readme = "README.md"
 license = { file = "LICENSE" }
 requires-python = ">=3.13.7"
 dependencies = [
+    "returns[compatible-mypy]>=0.26.0",
 ]
