update readme and setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 # Read more about `setup.cfg`:
 # https://docs.python.org/3/distutils/configfile.html
 
-# tempalte taken from: https://github.com/wemake-services/wemake-python-styleguide/blob/master/pyproject.toml
+# template taken from: https://github.com/wemake-services/wemake-python-styleguide/blob/master/pyproject.toml
 
 [flake8]
 format = wemake
