--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ requires = [
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "SamplModls"
+name = "gsapdef"
 version = "25.12.16"
 authors = [
     { name="David Capalbo", email="david.capalbo@uni-konstanz.de" }
